--- a/keibaai/data/features/parquet/feature_names.yaml
+++ b/keibaai/data/features/parquet/feature_names.yaml
@@ -11,7 +11,9 @@
 - career_wins
 - career_places
 - last_5_finishes
+- "sex_\u30BB"
 - "sex_\u725D"
+- "sex_\u7261"
 - bracket_is_inner
 - bracket_is_middle
 - bracket_is_outer
