--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,160 @@ dmypy.json
 tmp/
 temp/
 *.tmp
+
+# =============================================================================
+# KeibaAI_v2 Project Specific - Added 2025-11-16
+# =============================================================================
+
+# Data directories (CRITICAL: Large files, never commit these)
+# Total size: ~278,098 race records = several GB
+keibaai/data/raw/html/
+keibaai/data/parsed/parquet/
+keibaai/data/features/parquet/
+keibaai/data/models/
+keibaai/data/simulations/
+keibaai/data/orders/
+keibaai/data/logs/
+
+# Keep directory structure with .gitkeep files
+!keibaai/data/.gitkeep
+!keibaai/data/raw/.gitkeep
+!keibaai/data/raw/html/.gitkeep
+!keibaai/data/parsed/.gitkeep
+!keibaai/data/parsed/parquet/.gitkeep
+!keibaai/data/features/.gitkeep
+!keibaai/data/features/parquet/.gitkeep
+!keibaai/data/models/.gitkeep
+!keibaai/data/simulations/.gitkeep
+!keibaai/data/orders/.gitkeep
+!keibaai/data/logs/.gitkeep
+
+# Metadata database files
+keibaai/data/metadata/*.sqlite3
+keibaai/data/metadata/*.sqlite3-journal
+keibaai/data/metadata/*.db
+
+# Scraped/Generated CSV and text files
+kaisai_dates.csv
+race_id_list.csv
+horse_id_list.txt
+debug_scraped_data.csv
+distance_analysis.txt
+
+# Debug output directories and files
+output_final/
+output_*/
+debug_output/
+**/output_*.csv
+**/debug_*.csv
+
+# Additional model file formats
+*.h5
+*.hdf5
+*.joblib
+*.model
+*.lgbm
+*.onnx
+*.pt
+*.pth
+
+# Large data formats
+*.arrow
+*.feather
+*.msgpack
+
+# Jupyter Notebook outputs (comprehensive)
+**/.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# Web scraping tools
+chromedriver
+geckodriver
+*.crx
+
+# Temporary analysis and test files
+analysis_*.csv
+analysis_*.txt
+test_output_*.txt
+test_output_*.csv
+verification_*.json
+validate_*.json
+
+# Configuration files with sensitive data
+keibaai/configs/secret.yaml
+keibaai/configs/credentials.yaml
+keibaai/configs/local_override.yaml
+.env.local
+.env.production
+.env.secret
+
+# OS-specific files (comprehensive)
+Thumbs.db
+Desktop.ini
+.DS_Store
+._*
+
+# Raw JSON data
+keibaai/data/raw/json/
+
+# Parquet metadata
+keibaai/data/**/_metadata
+keibaai/data/**/_common_metadata
+
+# Python cache (additional patterns)
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.dylib
+
+# Testing artifacts
+.coverage.*
+htmlcov/
+.pytest_cache/
+.tox/
+.hypothesis/
+
+# Documentation build artifacts
+docs/_build/
+docs/_static/
+docs/_templates/
+
+# Backup files
+*.bak
+*.backup
+*.old
+*~
+
+
+# Cache directories
+.cache/
+*.cache
+__pycache__/
+
+# IDE and editor files (comprehensive)
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Node modules (if any frontend tools are used)
+node_modules/
+
+# Compiled translations
+*.mo
+
+# Package files
+*.tar.gz
+*.zip
+*.rar
+*.7z
+
+keibaai/archives
