--- a/keibaai/configs/optimization.yaml
+++ b/keibaai/configs/optimization.yaml
@@ -9,11 +9,12 @@ optimizer:
   fractional_kelly:
     # ケリー比率に乗じる係数 (0.0 ~ 1.0)
     # 1.0に近いほど積極的、0.0に近いほど保守的
-    fraction: 0.1
+    fraction: 0.2
 
   # 投資制約
   constraints:
-    # 1レースあたりの最大投資額（円）
+    # 1日あたりの最大投資額（円）
+    # ※ロジック修正により、これを「1日全体の予算」として扱います
     max_investment_per_race: 10000
 
     # 1つの買い目あたりの最大投資額（円）
